Added employee payroll with logo

--- a/Employeepayroll-app.html
+++ b/Employeepayroll-app.html
@@ -1,7 +1,3 @@
-<!--
- Ability to set the event listener to the salary
--->
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -17,7 +13,7 @@
 <body>
     <header class="header-content header">
         <div class="logo-content">
-            <img src="../assets/logo.png" alt="sample photo">
+            <img src="D:\img\logo.png" alt="sample photo">
             <div>
                 <span class="emp-text"> EMPLOYEE </span><br>
                 <span class="emp-text emp-payroll"> PAYROLL </span>
@@ -37,8 +33,7 @@
                 <label class="label text" for="profile">Profile Image</label>
                 <div class="profile-radio-content">
                     <label>
-                        <input type="radio" id="profile1" name="profile" value="../assets/profile-images/Ellipse -3.png"
-                            required>
+                        <input type="radio" id="profile1" name="profile" value="C:\Users\ppmoh\img.png" required>
                         <img class="profile" id="image1" src="/assets/profile-images/Ellipse -3.png">
                     </label>
                     <label>
